# newton

./: .gitignore  CMakeLists.txt  README.md  big_queries.txt  build.sh  closure_queries.txt  epsilon_queries.txt  heuristic_queries.txt  queries.txt  queries_meta_data.txt  run_experiments.sh  slurm_bash  slurm_job_array.sh  slurm_job_closure_computation.sh  slurm_job_epsilon_mvh.sh  slurm_job_heuristic_computation_array.sh  trial_queries.txt
examples/: CMakeLists.txt  basic_example.cpp  boost_example.cpp
include/: definitions.h  experiment_utils.h  multi_objective_parser.h  parser.h
include/data_structures/: adjacency_matrix.h  apex_path_pair.h  edge.h  map_queue.h  node.h
include/multivalued_heuristic/: backward_search.h  boa_backward_search.h  closure.h  colored_forward_search.h  post_process.h
include/newton/: boost_utils.hpp  core.hpp
include/parsers/: multi_valued_heuristic_parser.h  single_valued_heuristic_parser.h
include/solvers/: abstract_solver.h  apex.h  boa.h  namoa_dr.h  shortest_path_heuristic_computer.h
output/: out1.txt
src/: CMakeLists.txt  boost_utils.cpp  core.cpp  experiment_utils.cpp  main.cpp  multi_objective_parser.cpp  parser.cpp
src/data_structures/: adjacency_matrix.cpp  apex_path_pair.cpp  map_queue.cpp  node.cpp
src/multivalued_heuristic/: backward_search.cpp  boa_backward_search.cpp  closure.cpp  colored_forward_search.cpp  post_process.cpp
src/parsers/: multi_valued_heuristic_parser.cpp  single_valued_heuristic_parser.cpp
src/solvers/: apex.cpp  boa.cpp  namoa_dr.cpp  shortest_path_heuristic_computer.cpp
tests/: CMakeLists.txt  main.cpp  test_adjacency_matrix.cpp  test_apex_path_pair.cpp  test_boa.cpp  test_core.cpp  test_node.cpp  test_parser.cpp  test_post_process.cpp  test_shortest_path_heuristic.cpp
tests/multivalued_heuristic/: test_backward_search.cpp
tests/solvers/: test_apex.cpp  test_boa.cpp  test_namoa.cpp
to_server/: slurm_job_array.sh  small_queries.txt
